Bump version to 1.8.1 Fix alignment-bug in the footer for webkit-browsers Fix bug where gallery thumbnails were only 1px wide on mobile devices. Fixes #23. Props @baoshi

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  * Description:	A WordPress Theme based on Bootstrap, from Twitter. It features a 100% responsive layout, a superb gallery and image handling with a custom image meta widget and carousel for gallery post-formats, the Glyphicon Icon set, a clean and simple design and a lot more! The Bootstrap runs on HTML5 and CSS3, a 12-column grid and comes with custom jQuery plugins. See the Bootstrap documentation on GitHub for reference.
  * Author:		Konstantin Obenland
  * Author URI:	http://en.wp.obenland.it/
- * Version:		1.8.0
+ * Version:		1.8.1
  * Tags:		black, blue, white, light, custom-background, custom-header, custom-menu, featured-images, flexible-width, full-width-template, left-sidebar, microformats, post-formats, right-sidebar, sticky-post, theme-options, threaded-comments, translation-ready, two-columns
  * Text Domain:	the-bootstrap
  * Domain Path:	/lang
@@ -232,7 +232,7 @@ img.wp-smiley {
 /* =Footer
 -------------------------------------------------------------- */
 
-#colophon .nav-pills {
+#colophon .credits {
 	margin: 0;
 }
 
@@ -420,6 +420,9 @@ a img.alignleft {
 	}
 	.thumbnails [class*="span"] {
 		width: 21%;
+	}
+	.thumbnail > img {
+		width: auto;
 	}
 	.sidebar-content #primary,
 	.sidebar-content #attachment-comment {
